Bug: PRD Reviewer: Jay Wootton Comment: In the landing page editor, in the TableDropWidget, set the cell alignment to Top so the DropZone is always at the top.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -51,8 +51,8 @@
 {
 	background-color: #FFFFFF;
 	border: 1px solid #999999;
-	margin-left: 5px;
 	height: 350px;
+	margin-left: 5px;
 	overflow: auto;
 	width: 750px;
 }
@@ -142,8 +142,8 @@
 {
 	background-color: #FFFFFF;
 	border: 1px solid #999999;
+	height: 100%;
 	min-height: 50px;
-	overflow: auto;
 	width: 100%;
 }
 
@@ -160,7 +160,6 @@
 	border: 1px solid #999999;
 	height: 100%;
 	min-height: 50px;
-	overflow: auto;
 	width: 100%;
 }
 
@@ -189,6 +188,7 @@
 .lpePaletteItem
 {
 	background: #EFEEEC url(images/putty_blend3.png) repeat-x scroll 0 0;
+	cursor: move;
 	height: 20px;
 	margin: 3px;
 	padding: 3px;
